# engine4heroes

./: .gitignore  CMakeLists.txt  Makefile  Makefile.switch  README.md  engine4heroes-vs2019.vcxproj  sonar-project.properties
.github/workflows/: code_style_check.yml  make.yml  msvc.yml  pull_request.yml  push.yml  sonarcloud.yml
VisualStudio/: common.props
VisualStudio/engine4heroes/: common.props  sources.props
VisualStudio/tools/extractor/: sources.props
VisualStudio/tools/h4d-unpack/: sources.props
docs/: README.txt  README_switch.md
script/android/: install_packages.bat  install_packages.sh
script/linux/: install_sdl2.sh  install_sdl2_dev.sh
script/macos/: Brewfile  Brewfile.app_bundle  Brewfile.dev_tools  README.md  cleanup_app_bundle_files.sh
script/tools/: check_code_format.sh  check_copyright_headers.sh
script/tools/copyright_headers/: full_header_c_like.txt  full_header_script.txt  full_header_winbat.txt  header_template_c_like.txt  header_template_script.txt  header_template_winbat.txt
script/windows/: install_packages.bat
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  audio.cpp  audio.h  core.cpp  core.h  dir.cpp  dir.h  exception.h  h4d_file.cpp  h4d_file.h  h4d_image.cpp  h4d_image.h  h4r_file.cpp  h4r_file.h  image.cpp  image.h  image_tool.cpp  image_tool.h  localevent.cpp  localevent.h  logging.cpp  logging.h  math_base.h  math_tools.cpp  math_tools.h  rand.cpp  rand.h  render_processor.cpp  render_processor.h  resource_manager.cpp  resource_manager.h  screen.cpp  screen.h  serialize.cpp  serialize.h  system.cpp  system.h  thread.cpp  thread.h  timing.cpp  (+9 more)
src/engine4heroes/: CMakeLists.txt
src/engine4heroes/audio/: audio_manager.cpp  audio_manager.h  music_info.cpp  music_info.h  sound_info.cpp  sound_info.h
src/engine4heroes/game/: engine4heroes.cpp  game_hotkeys.cpp  game_hotkeys.h  game_language.h  game_mainmenu.cpp  game_mainmenu.h  game_mainmenu_ui.cpp  game_mainmenu_ui.h  game_string.cpp  game_string.h  resource_id.cpp  resource_id.h  resource_manager.cpp  resource_manager.h
src/engine4heroes/gui/: cursor.cpp  cursor.h  ui_base.cpp  ui_base.h  ui_button.cpp  ui_button.h  ui_language.cpp  ui_language.h  ui_text.cpp  ui_text.h  ui_tool.cpp  ui_tool.h
src/engine4heroes/system/: configuration.cpp  configuration.h  version.h
src/resources/: engine4heroes.icns  engine4heroes.rc
src/tools/: CMakeLists.txt  extractor-vs2019.vcxproj  extractor.cpp  h4d-unpack-vs2019.vcxproj  h4d-unpack.cpp
